package com.directi.training.lsp.exercice_refactored;

public interface IDuck {
  void quack();

  void swim();
}
