package com.directi.training.lsp.exercice_refactored;

public interface OperationalDuck extends IDuck {
  void turnOn();

  void turnOff();
}
